Get game from IGDB by enterint it id.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,15 @@
 <h1>Your game collection!</h1>
 
+<div>
+
+<p>Lets try get some info:</p>
+
+<p> <%= getino(1942) %> </p>
+
+<p> <%= get_cover(1942) %> </p>
+<p> <%= get_thumb(1942) %> </p>
+<p> <%= link_to 'Search for a game', search_path %></p>
+
+
+
+</div>
