--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,12 @@
   </head>
 
   <body>
+
+
+    <%= render 'layouts/messages' %>
     <%= yield %>
-     <hr>
+
+
     <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
