--- a/app/views/static_pages/search.html.erb
+++ b/app/views/static_pages/search.html.erb
@@ -2,11 +2,8 @@
 
 <%= form_tag("/search", method: :get, remote: true) do %>
 <%= text_field_tag(:inquiry) %>
-<%= submit_tag 'Search' %>
+<%= submit_tag 'Search', data: { disable_with: "Please wait..." } %>
 <% end %>
 <hr>
 
-<div id="search-errors"></div>
 <div id="search-results"></div>
-
-
