--- a/app/views/static_pages/_search_more.js.erb
+++ b/app/views/static_pages/_search_more.js.erb
@@ -1,1 +1,2 @@
-$("#search-results").html("<%= escape_javascript(render :partial => 'results') %>");
+$("#<%= sm_id %>").html("<%= escape_javascript(render :partial => 'results') %>");
+$("#<%= sm_id %>").attr('id', 'showed_them');
