Add nabar, footer, tiles for showing game covers

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,27 @@
-<h1>Your game collection!</h1>
+<%= link_to "Add Game", search_url %>
 
-<div>
 
-<p> <%= link_to 'Search for a game', search_path %></p>
 
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
