--- a/app/views/static_pages/search.html.erb
+++ b/app/views/static_pages/search.html.erb
@@ -1,8 +1,7 @@
-<h1>Search a game:</h1>
+<div class="uk-flex uk-flex-center">
+  <%= render 'layouts/searchbar' %>
+</div>
 
-<%= form_tag("/search", method: :get, remote: true) do %>
-  <%= text_field_tag(:inquiry) %>
-  <%= submit_tag 'Search', data: { disable_with: "Please wait..." } %>
-<% end %>
 
 <div id="search-results"></div>
+
