--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,24 +14,46 @@
  *= require_self
  */
 
-@import "bootstrap";
+@import "uikit/variables-theme.scss";
+@import "uikit/mixins-theme.scss";
+@import "uikit/uikit-theme.scss";
 
-@mixin box_sizing {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+
+// Search Bar (IGDB)
+
+html {
+  background-color: #E9E7E7;
 }
 
-.debug_dump {
-    clear: both;
-    float: left;
-    width: 60%;
-    background-image: linear-gradient(141deg, #c6d9ec, #738A9E);
-    border: 1px solid grey;
-    border-radius: 5px;
-    box-shadow: 7px 7px 6px grey;
-    margin: 45px 15px 45px 15px;
-    padding: 10px;
+// Footer
 
-    @include box_sizing;
+footer {
+  margin: auto;
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+}
+
+footer a {
+  font-size: 80%;
+  vertical-align: top;
+}
+
+footer a:hover {
+  color: #222;
+}
+
+footer small {
+  float: left;
+}
+
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer ul li{
+  float: left;
+  margin-left: 10px;
 }
