--- a/app/views/static_pages/_results.html.erb
+++ b/app/views/static_pages/_results.html.erb
@@ -1,29 +1,55 @@
 <% if @inquiry.results.present? %>
-  <table>
-    <% @inquiry.results.each do |game| %>
-      <tr>
-        <td><%= game["name"] %></td>
-        <td>
-          <% if game["first_release_date"]%>
-            <%= Time.at(game["first_release_date"]).year %>
-          <% else %>
-            -
-          <% end %>
-        </td>
-      </tr>
-   <% end %>
-  </table>
-  <% if @inquiry.is_more? %>
-    <div id="show-more">
-      <%= form_tag("/search", method: :get, remote: true) do %>
-      <%= hidden_field_tag :last_query, @inquiry.query %>
-      <%= hidden_field_tag :last_offset, @inquiry.offset %>
-      <%= submit_tag "Search more", data: { disable_with: "Please wait..." } %>
-      <% end %>
-    </div>
-  <% end %>
+
+
+
+
+
+
+<div class="uk-grid-match uk-child-width-1-6 uk-flex-center uk-text-center" uk-grid>
+  <% @inquiry.results.each do |game| %>
+  <div>
+    <div class="uk-card uk-card-small uk-card-default uk-card-body">
+      <h3 class="uk-card-title"><%= game["name"] %></h3>
+      <p>
+        <% if game["first_release_date"]%>
+        <%= Time.at(game["first_release_date"]).year %>
+        <% else %>
+        -
+        <% end %>
+      </p>
+
+
+
+<% if game["cover"] %>
+<% cover_id = game["cover"]["image_id"] %>
+<img data-src="https://images.igdb.com/igdb/image/upload/t_cover_big/<%= cover_id %>.jpg" width="data-width" height="data-hight" alt="" uk-img>
 <% else %>
-  <p>0 results for "<%= @inquiry.query %>"</p>
-  <!-- Give nicer better explanation maybe with buttons and links -->
-  <p>Try using "*" for searching (example: *shadd* > El Shaddai: Ascension of the Metatron)</p>
+  <p>no cover :((</p>
+<% end %>
+
+
+
+    </div>
+  </div>
+  <% end %>
+</div>
+
+
+
+
+
+
+<% if @inquiry.is_more? %>
+<div id="show-more">
+  <%= form_tag("/search", method: :get, remote: true) do %>
+  <%= hidden_field_tag :last_query, @inquiry.query %>
+  <%= hidden_field_tag :last_offset, @inquiry.offset %>
+  <%= submit_tag "Search more", class: "uk-button uk-button-default uk-light" , data: { disable_with: "Please wait..." } %>
+  <% end %>
+</div>
+<% end %>
+<% else %>
+<p>0 results for "<%= @inquiry.query %>"</p>
+<!-- Give nicer better explanation maybe with buttons and links -->
+<p>Try using "*" for searching (example: *shadd* > El Shaddai: Ascension of the Metatron)</p>
 <% end %>
