Fix Uikit installation(icons now working). Style show-more button. Add back to top button. Better covers.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
   <body>
     <%= render 'layouts/navigation' %>
     <%= render 'layouts/messages' %>
+    <div class="uk-container">
       <%= yield %>
+    </div>
     <%= render 'layouts/footer' %>
   </body>
 </html>
