Fix "Rock" query problem. Add cover helper. Remove ruby apicalypse gem. Add status icon with explanation. Add dlc icon.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -171,6 +171,9 @@ html {
     text-shadow: 2px 2px 3px #c2c2c2;
     padding: 50px 10px 0px 10px;
 }
+// Game Warning (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - - //
+.game-warning {
+}
 
 // Footer - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 footer {
