Delete test backgrounds. Add platforms to games in results. Rewrite Igdb query class. Add basic filtering (advanced search) feature.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,6 +119,12 @@ html {
     font-style: italic;
 }
 
+.game-platform {
+    margin: 0px;
+    font-size: 12px;
+    font-style: italic;
+}
+
 .game-cover {
     margin-bottom: 0px !important;
     border-radius: 3px;
