--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -177,6 +177,15 @@ html {
     text-shadow: 2px 2px 3px #c2c2c2;
     padding: 50px 10px 0px 10px;
 }
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 // Game Warning (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - - //
 .game-warning {
 }
