Add erotic games and only released filter.

--- a/app/views/layouts/_searchbar.html.erb
+++ b/app/views/layouts/_searchbar.html.erb
@@ -11,7 +11,7 @@
   <%= f.check_box :computer, checked: "checked" %> <span>old computers</span>
   <%= f.check_box :other, checked: "checked" %> <span>other</span>
   <%= f.check_box :erotic, checked: "unchecked" %> <span>erotic games</span>
-  <%= f.check_box :only_released, checked: "unchecked" %> <span>only released games</span>
+  <%= f.check_box :only_released, checked: "checked" %> <span>only released games</span>
   <%= f.submit 'default', type: "reset" %>
   <%= f.submit 'Search', data: { disable_with: "Please wait..." } %>
 <% end %>
