--- a/app/views/static_pages/search.html.erb
+++ b/app/views/static_pages/search.html.erb
@@ -1,5 +1,2 @@
-<div class="uk-flex uk-flex-center">
-  <%= render 'layouts/searchbar' %>
-</div>
-
+<%= render 'searchbar' %>
 <div id="search-results"></div>
