--- a/app/views/static_pages/_cover_view.html.erb
+++ b/app/views/static_pages/_cover_view.html.erb
@@ -1,40 +1,35 @@
-<div class="uk-grid uk-flex-center uk-text-center uk-margin-medium cover-view">
+<div class="uk-grid uk-text-center uk-flex uk-flex-center">
+  <!-- <div class="uk-grid uk-text-center uk-flex-center cover-view"> -->
   <% @inquiry.results.each do |game| %>
   <div class="game-space">
-
     <%= get_game_cover(game) %>
-
     <p class="game-name">
       <%= game["name"] %>
       <% if (status_id = game["status"]) && status_id != 0 %>
-         <button class="game-warning", uk-icon="icon: warning"
-         uk-tooltip="title: <%= convert_status(status_id) %>; pos: right"></button>
+      <button class="game-warning", uk-icon="icon: warning"
+      uk-tooltip="title: <%= convert_status(status_id) %>; pos: right"></button>
       <% end %>
-
       <% if (category_id = game["category"]) && category_id != 0 %>
-        <button class="game-warning", uk-icon="icon: album"
-         uk-tooltip="title: <%= convert_category(category_id) %>; pos: right"></button>
+      <button class="game-warning", uk-icon="icon: album"
+      uk-tooltip="title: <%= convert_category(category_id) %>; pos: right"></button>
       <% end %>
     </p>
-
     <p class="game-release-date">
       <% if game["first_release_date"]%>
       <%= Time.at(game["first_release_date"]).year %>
       <% else %>
       -
       <% end %>
-
-<!-- Temporary!!!!!!!!! -->
-<% if game["platforms"] %>
-  <% game["platforms"].each do |platform| %>
-    <p class="game-platform">
-    <%= platform["name"]%>
-    </p>
-  <% end %>
-<% end %>
-<!-- !!!!!!!!!!!!! -->
-
+      <!-- Temporary!!!!!!!!! -->
+      <% if game["platforms"] %>
+      <% game["platforms"].each do |platform| %>
+      <p class="game-platform">
+        <%= platform["name"]%>
+      </p>
+      <% end %>
+      <% end %>
+      <!-- !!!!!!!!!!!!! -->
+    </div>
+    <% end %>
   </div>
-  <% end %>
-</div>
 </div>
