Add styling to search-filter.

--- a/app/views/static_pages/_results.html.erb
+++ b/app/views/static_pages/_results.html.erb
@@ -24,9 +24,9 @@
 <!-- Give nicer better explanation maybe with buttons and links -->
 <p>Try using "*" for searching (example: *shadd* > El Shaddai: Ascension of the Metatron)</p>
 <% end %>
-<!--
+
 <div class="scroll-up">
   <a class="scroll-up-button" href="#target"
     uk-icon="icon: arrow-up; ratio: 2"
   uk-scroll="duration: 600"></a>
-</div> -->
+</div>
