--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@ body {
     overflow-y: scroll;
 }
 
-// Search Form (Search IGDB)  - - - - - - - - - - - - - - - - - - - - - - - - //
+// Search Form (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - - - - //
 .search-form {
     text-align: center;
 }
@@ -37,38 +37,99 @@ body {
 .search-bar {
     padding-left: 40px;
     border-radius: 5px;
-    height: 35px;
-    width: 350px;
+    height: 40px;
+    width: 400px;
+    font-size: 18px;
 }
 
-.search:hover, :focus {
+.search-bar:hover, .search-bar:focus {
     box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6);
 }
 
+// Search Dropodown (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - //
 .search-dropdown {
-    background-color: rgba(255, 255, 255, 0.85);
+    background-color: #ffffffcf;
     box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6);
     padding: 10px;
     border-radius: 5px;
     font-size: 14px;
-    width: 350px;
+    width: 400px;
+    text-align: left;
 }
 
+[class*='uk-dropdown-bottom'] {
+    margin-top: 20px;
+}
+
+.uk-checkbox:focus {
+    box-shadow: none;
+}
+
+.drop-label {
+    margin-bottom: 2px;
+    width: 100%;
+    height: 20px;
+    border-bottom: 1px solid grey;
+    text-align: left;
+}
+
+.drop-grid {
+    margin-bottom: 10px;
+    margin-top: 10px !important;
+}
+
+.platforms-labels {
+    width: 100px;
+    font-size: 14px;
+}
+
+.options-labels {
+    width: 180px;
+    font-size: 14px;
+}
+
+.drop-buttons {
+    text-align: right;
+}
+
+
+.search-button {
+    box-shadow: none;
+    background: transparent;
+    border: 0px;
+    transition-duration: 0.8s;
+    font-size: 15px;
+    text-transform: capitalize;
+    color: #666666;
+    padding: 0px 10px 0px 10px;
+}
+
+.reset-button {
+    @extend .search-button;
+}
+
+.search-button:focus {
+    color: inherit;
+}
+
+.search-button:hover {
+    color: inherit;
+    filter: drop-shadow(0px 2px 3px #ACACAC);
+}
+
+.search-button:active {
+    background: transparent;
+    border: 0px;
+    transform: scale(0.97);
+    transition-duration: 0.1s;
+}
+
+.search-button:disabled {
+}
+
+// Other (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 .uk-tooltip {
     box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6) !important;
-}
-
-.uk-search-navbar .uk-search-input {
-    border-radius: 50px;
-    // border: 3px solid white;
-    font-size: 18px;
-    background: white;
-    // background: linear-gradient(0deg, rgba(255, 255, 255, 1) 30%, rgba(231, 231, 231, 1) 100%);
-}
-
-.uk-search-input:hover, :focus {
-    // box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6);
-    // Fix This
 }
 
 // Search Results (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - //
@@ -85,14 +146,13 @@ body {
 }
 
 .scroll-up-button {
-    box-shadow: 0px 0px 0px 0px transparent;
+    box-shadow: none;
     background: transparent;
     border: 0px;
     transition-duration: 0.2s;
 }
 
 .scroll-up-button:hover {
-    box-shadow: 0px 0px 0px 0px transparent;
     filter: drop-shadow(0px 2px 3px #ACACAC);
     background: transparent;
     border: 0px;
@@ -100,17 +160,16 @@ body {
 }
 
 .scroll-up-button:active {
-    box-shadow: 0px 0px 0px 0px transparent;
     background: transparent;
     border: 0px;
     transform: scaleY(1.5);
-
 }
 
 // Show More Button (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - //
 #show-more {
     text-align: center;
 }
+
 .show-more-button {
     background: white;
     border: 0px;
@@ -170,8 +229,9 @@ body {
 }
 
 .game-cover-effect:hover {
-  transform: rotate(10deg);
-  // cursor: pointer; // might be not needed
+    transform: rotate(10deg);
+
+    // cursor: pointer; // might be not needed
 }
 
 .game-cover-effect::after {
@@ -199,7 +259,7 @@ body {
 }
 
 .no-cover:hover {
-  transform: rotate(10deg);
+    transform: rotate(10deg);
 }
 
 .no-cover-tag {
@@ -219,9 +279,9 @@ body {
     -ms-user-select: none;
     user-select: none;
 }
+
 // Game Warning (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - - //
-.game-warning {
-}
+.game-warning {}
 
 // Footer - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 footer {
@@ -252,5 +312,38 @@ footer ul {
 
 footer ul li {
     float: left;
+    margin-left: 10px;
+}
+
+// Strike - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
+.strike {
+    display: block;
+    text-align: left;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.strike > span {
+    position: relative;
+    display: inline-block;
+}
+
+.strike > span:before,
+.strike > span:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    width: 9999px;
+    height: 1px;
+    background: #C8C8C8;
+}
+
+.strike > span:before {
+    right: 100%;
+    margin-right: 10px;
+}
+
+.strike > span:after {
+    left: 100%;
     margin-left: 10px;
 }
