--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,10 +1,11 @@
-<!-- <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky"> -->
-<nav class="uk-navbar-container uk-navbar-transparent uk-dark" uk-navbar>
-  <div class="uk-navbar-left">
-    <ul class="uk-navbar-nav">
-      <li><%= link_to "YVGC", root_path %></li>
-    </ul>
-  </div>
-  <div class="uk-navbar-center">
-  </div>
-</nav>
+<div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
+  <nav class="uk-navbar-container uk-navbar-transparent uk-dark" uk-navbar>
+    <div class="uk-navbar-left">
+      <ul class="uk-navbar-nav">
+        <li><%= link_to "YVGC", root_path %></li>
+      </ul>
+    </div>
+    <div class="uk-navbar-center">
+    </div>
+  </nav>
+</div>
