--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,7 +49,7 @@ body {
 // Search Dropodown (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - //
 .search-dropdown {
     background-color: #ffffffcf;
-    box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6);
+    box-shadow: -2px 4px 9px 1px rgba(0, 0, 0, 0.16);
     padding: 10px;
     border-radius: 5px;
     font-size: 14px;
@@ -250,7 +250,7 @@ body {
     height: 266px;
     margin-bottom: 0px !important;
     border-radius: 3px;
-    outline: 1px solid #ffffff3d;
+    outline: 1px solid #ffffffe8;
     outline-offset: -1px;
     outline-style: outset;
     background-color: transparent;
@@ -278,6 +278,37 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+// More Platforms Toggler - - - - - - - - - - - - - - - - - - - - - - - - - - //
+.more-platforms {
+    max-width: 200px
+}
+
+
+.mp-label{
+cursor: pointer;
+}
+
+.mp {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.mp + svg {
+    fill: #666;
+}
+
+.mp:hover + svg {
+   filter: drop-shadow(0px 2px 3px #ACACAC);
+    transition: .4s;
+}
+
+.mp:checked + svg {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 // Game Warning (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - - //
@@ -347,3 +378,6 @@ footer ul li {
     left: 100%;
     margin-left: 10px;
 }
+
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
+
