Fix problem with filters. Add dev search (still not such option in view)

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
+<!-- <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky"> -->
   <nav class="uk-navbar-container uk-navbar-transparent uk-dark" uk-navbar>
     <div class="uk-navbar-left">
       <ul class="uk-navbar-nav">
@@ -8,4 +8,4 @@
     <div class="uk-navbar-center">
     </div>
   </nav>
-</div>
+<!-- </div> -->
