Add custom validator for IgdbQuery class. Add errors notificator to search bar. Add api status notificato to search bar (still requires appropriate helper). Add filtering options for game's title search, dev search, release date search.

--- a/app/views/static_pages/search.js.erb
+++ b/app/views/static_pages/search.js.erb
@@ -1,1 +1,5 @@
-$("#search-results").html("<%= escape_javascript(render :partial => 'results') %>");
+$("#search-errors").html("<%= escape_javascript(render :partial => 'search_errors') %>");
+
+if (<%= !@inquiry.errors.any? %>) {
+  $("#search-results").html("<%= escape_javascript(render :partial => 'results') %>");
+}
