--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,13 +22,21 @@ html {
     background-color: #E9E7E7;
 }
 
-
 body {
     overflow-y: scroll;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none;  /* IE 10+ */
+    scrollbar-width: none;
+
+    /* Firefox */
+    -ms-overflow-style: none;
+
+    /* IE 10+ */
 }
-body::-webkit-scrollbar { width: 0 !important } // Safari, Chrome, Opera
+
+body::-webkit-scrollbar {
+    width: 0 !important;
+}
+
+// Safari, Chrome, Opera
 
 // Search Form (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - - - - //
 .search-form {
@@ -37,6 +45,7 @@ body::-webkit-scrollbar { width: 0 !important } // Safari, Chrome, Opera
 
 .search-bar {
     padding-left: 40px;
+    padding-right: 40px;
     border-radius: 5px;
     height: 40px;
     width: 400px;
@@ -45,6 +54,46 @@ body::-webkit-scrollbar { width: 0 !important } // Safari, Chrome, Opera
 
 .search-bar:hover, .search-bar:focus {
     box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6);
+}
+
+.search-icon { left: 24px; }
+
+.info-icon {
+    position: relative;
+    left: 394px;
+    color: #999999;
+    svg {
+        fill: #999999;
+    }
+}
+
+.info-icon:hover {
+    color: #666;
+}
+
+.info-icon:hover svg {
+    fill: #666;
+}
+
+.info-icon:hover ~ .search-bar {
+    box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6);
+}
+
+// Errors (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - - - - - - //
+.warning-icon {
+    @extend .search-icon;
+    pointer-events: all !important;
+    color: #999999;
+}
+
+.blink_me {
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0.1;
+  }
 }
 
 // Search Dropodown (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - //
@@ -82,17 +131,24 @@ body::-webkit-scrollbar { width: 0 !important } // Safari, Chrome, Opera
 .platforms-labels {
     width: 100px;
     font-size: 14px;
+
+    span {
+        padding-left: 5px;
+    }
 }
 
 .options-labels {
     width: 180px;
     font-size: 14px;
+
+    span {
+        padding-left: 5px;
+    }
 }
 
 .drop-buttons {
     text-align: right;
 }
-
 
 .search-button {
     box-shadow: none;
@@ -102,7 +158,7 @@ body::-webkit-scrollbar { width: 0 !important } // Safari, Chrome, Opera
     font-size: 15px;
     text-transform: capitalize;
     color: #666666;
-    padding: 0px 10px 0px 10px;
+    padding: 0px 10px 0px 0px;
 }
 
 .reset-button {
@@ -125,8 +181,7 @@ body::-webkit-scrollbar { width: 0 !important } // Safari, Chrome, Opera
     transition-duration: 0.1s;
 }
 
-.search-button:disabled {
-}
+.search-button:disabled {}
 
 // Other (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 .uk-tooltip {
@@ -283,18 +338,17 @@ body::-webkit-scrollbar { width: 0 !important } // Safari, Chrome, Opera
 
 // More Platforms Toggler - - - - - - - - - - - - - - - - - - - - - - - - - - //
 .more-platforms {
-    max-width: 200px
+    max-width: 200px;
 }
 
-
-.mp-label{
-cursor: pointer;
+.mp-label {
+    cursor: pointer;
 }
 
 .mp {
-  opacity: 0;
-  width: 0;
-  height: 0;
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
 
 .mp + svg {
@@ -302,18 +356,23 @@ cursor: pointer;
 }
 
 .mp:hover + svg {
-   filter: drop-shadow(0px 2px 3px #ACACAC);
+    filter: drop-shadow(0px 2px 3px #ACACAC);
     transition: .4s;
 }
 
 .mp:checked + svg {
-  -webkit-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
 }
 
 // Game Warning (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - - //
-.game-warning {}
+.game-warning {
+    color: #999999;
+    :hover {
+        color: #666;
+    }
+}
 
 // Footer - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 footer {
@@ -381,4 +440,3 @@ footer ul li {
 }
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
-
