--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
   <body>
     <%= render 'layouts/navigation' %>
     <%= render 'layouts/messages' %>
+
     <div class="uk-container">
       <%= yield %>
     </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
