--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,12 +50,15 @@ body::-webkit-scrollbar {
     box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6);
 }
 
-.search-icon { left: 20px; }
+.search-icon {
+    left: 20px;
+}
 
 .info-icon {
     position: relative;
     left: 390px;
     color: #999999;
+
     svg {
         fill: #999999;
     }
@@ -84,28 +87,53 @@ body::-webkit-scrollbar {
 // Errors (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - - - - - - //
 .warning-icon {
     @extend .search-icon;
+
     pointer-events: all !important;
     color: #999999;
 }
 
 .blink_me {
-  animation: blinker 1s linear infinite;
+    animation: blinker 1s linear infinite;
 }
 
 @keyframes blinker {
-  50% {
-    opacity: 0.1;
-  }
+    50% {
+        opacity: 0.1;
+    }
 }
 
 // API Status and Search warnings (Search IGDB) - - - - - - - - - - - - - - - //
 .api-status {
     text-align: right;
+
     // left: 15px !important;
 }
 
 .search-warnings {
     text-align: right;
+}
+
+.errors-dropdown {
+    background-color: #666666de;
+    border-radius: 5px;
+    padding: 7px;
+    text-align: left;
+    p {
+        font-size: 12px;
+        color: #fff;
+        margin-bottom: 0px;
+    }
+
+    ul {
+        margin: 0px;
+        margin-bottom: 3px;
+    }
+
+    li {
+        font-size: 12px;
+        color: #fff;
+        padding-left: 0px;
+    }
 }
 
 // Search Dropodown (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - //
@@ -197,16 +225,14 @@ body::-webkit-scrollbar {
 
 // Other (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 .uk-tooltip {
-  box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6) !important;
-
-  box-sizing: border-box;
-  max-width: 200px;
-  padding: 3px 6px;
-
-  background: #666;
-  border-radius: 2px;
-  color: #fff;
-  font-size: 12px;
+    box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6) !important;
+    box-sizing: border-box;
+    max-width: 200px;
+    padding: 3px 6px;
+    background: #666666de;
+    border-radius: 2px;
+    color: #fff;
+    font-size: 12px;
 }
 
 // Search Results (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - //
@@ -390,6 +416,7 @@ body::-webkit-scrollbar {
 // Game Warning (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - - //
 .game-warning {
     color: #999999;
+
     :hover {
         color: #666;
     }
